--- a/.gitignore
+++ b/.gitignore
@@ -377,6 +377,9 @@ Custom
 CrtAnalyticsDashboard
 CrtBase
 CrtCasesInC360
+CrtCopilot
+CrtCopilotIntentsStudio/Files
+OAuth20/Files/images
 CrtCore
 CrtCustomer360App
 CrtCustomer360Mobile
@@ -385,12 +388,23 @@ CrtDocument
 CrtEmailSender
 CrtInvoiceInC360
 CrtLeadOppMgmtApp
+CrtMobileFreedomUIStylesFor7x
+CrtOmnichannelApp
 CrtOpportunityInC360
 CrtOrderContractInC360
+CrtProductivityCopilot
+CrtProductivityMobile
 CrtRecommendedProduct
 CrtSalesInC360
 CrtSimilarLead
 CrtSLAInC360
+CrtSecurity
+CrtSecurity7x
+CrtSpecification
+CrtStudioCopilot/Files
+CrtTechUserCreatioALMIntegration
+CrtTechnicalUsers
+CrtWebFarm/Files
 CrtDesignerTools
 CrtNextStep
 CrtNUI
